[package]
name = "ecdsa-tss"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
cty = "0.2.2"
curv-kzen = "0.9.0"
multi-party-ecdsa = { git = "https://github.com/ZenGo-X/multi-party-ecdsa", branch = "master" }
round-based = { version = "0.1.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
concat-idents = "1.1"
hex = "0.4"
anyhow = "1.0"
log = "0.4"